change URL in app.js

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-app",
-  "homepage": "https://boxrawhydrogen.com",
+  "homepage": "https://wajidrazanaeem.github.io/boxrawHydrogen/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
